<resources>
    <string name="app_name" translatable="false">Fucking Awesome Editor</string>

    <string name="title_activity_filters">Filters</string>
    <string name="title_activity_scaling">Scaling</string>
    <string name="title_activity_usm">Unsharp Masking</string>
    <string name="title_activity_bi__filters">Bilinear Filters</string>
    <string name="title_activity_segmentation">Segmentation</string>
    <string name="title_activity_retouch">Retouch</string>
    <string name="title_activity_color__filters">Color Filters</string>
    <string name="title_activity_rotation">Rotation</string>
    <string name="title_activity_a__star">A* algorithm</string>
    <string name="title_activity_spline">Spline</string>

    <string name="choose_filter">Choose Filter</string>
    <string name="select_or_capture_image">Select or Capture Image</string>
    <string name="HINT">HINT: do something ;)</string>

    <string name="heuristic">Passage rules: </string>
    <string name="four">Four directions</string>
    <string name="eight">Eight directions</string>
    <string name="best">Eight directions, if corner is not blocked</string>

    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>

    <string name="set_start">Set START</string>
    <string name="set_finish">Set FINISH</string>
    <string name="set_walls">Set WALLs</string>
    <string name="start_algo">Start algo</string>
    <string name="walls">Walls:</string>
    <string name="romb">rhombus</string>
    <string name="square">square</string>
    <string name="circular">circular</string>
    <string name="size">Size:</string>
    <string name="color">Color:</string>
    <string name="path">Path:</string>
    <string name="radius">Radius</string>
    <string name="brush_size">Brush size</string>
    <string name="current_angle">Angle: 0</string>
    <string name="scale">Scale</string>
    <string name="reset">Reset</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="faces">FACES</string>
    <string name="edit">EDIT</string>
    <string name="amount">Amount</string>
    <string name="threshold">Threshold</string>
    <string name="rotate">rotate</string>
    <string name="crop">crop</string>
    <string name="mirroring">mirroring</string>
    <string name="start_points">Start points</string>
    <string name="finish_points">Finish points</string>
    <string name="listitem_text" translatable="false">Laguna</string>
    <string name="rv_image">rv_image</string>
    <string name="default_image" translatable="false">default_image</string>
    <string name="add_pnts" translatable="false">add_pnts</string>

    <string name="threshold_max" translatable="false">255</string>
    <string name="radius_max" translatable="false">50</string>
    <string name="amount_max" translatable="false">100%</string>
    <string name="amount_min" translatable="false">0%</string>
    <string name="scaling_max" translatable="false">2</string>
    <string name="scaling_middle" translatable="false">1</string>
    <string name="size_mov_circles_max" translatable="false">5</string>
    <string name="left_turn_boundary" translatable="false">-90</string>
    <string name="right_turn_boundary" translatable="false">+90</string>
    <string name="zero" translatable="false">0</string>

    <string name="current_method">Current METHOD</string>
    <string name="info" translatable="false">info</string>
    <string name="settings">Settings</string>
    <string name="point">   Point:</string>
    <string name="first_point">First point:</string>
    <string name="second_point">Second point:</string>
    <string name="third_point">Third point:</string>
    <string name="switch_language">Switch language</string>
    <string name="example">Example</string>
    <string name="language">Language: </string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="theme">Theme:</string>
    <string name="dark_mode">Dark mode</string>
    <string name="cd">cd</string>
    <string name="a_star_name">A* algorithm</string>
    <string name="warning_set_start_and_finish">You need to set start and finish first!</string>
    <string name="warning_no_points">No points, dude</string>
    <string name="interpolation_slines">Splines and lines</string>
    <string name="filter_original" translatable="false">Original</string>
    <string name="filters_movie" translatable="false">Movie</string>
    <string name="filters_blur" translatable="false">Blur</string>
    <string name="filers_black_and_white" translatable="false"><![CDATA[B&W]]></string>
    <string name="filter_blue_laguna" translatable="false">Blue laguna</string>
    <string name="filter_contrast" translatable="false">Contrast</string>
    <string name="filter_sephia" translatable="false">Sephia</string>
    <string name="filter_noise" translatable="false">Noise</string>
    <string name="filter_green_grass" translatable="false">Green grass</string>
    <string name="filter_ruby" translatable="false">Ruby</string>
    <string name="filter_vignette" translatable="false">Vignette</string>
    <string name="color_correction_name">Color correction</string>
    <string name="change_lost">Changes will be lost. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="points_on_one_line">Points on one line</string>
    <string name="algem_2_0_name">Linear algebra</string>
    <string name="failed">Failed!</string>
    <string name="share_image">Share Image</string>
    <string name="image_saved_in">Image saved in</string>
    <string name="some_error">Some Error!</string>
    <string name="retouch">Retouch</string>
    <string name="radius_is">Radius: %d</string>
    <string name="brush_is">Brush: %d</string>
    <string name="name_rotation">Rotation</string>
    <string name="name_scaling">Scaling</string>
    <string name="width_is">Width: %d</string>
    <string name="height_is">Height: %d</string>
    <string name="scale_is">Scale: %.2fx</string>
    <string name="amount_is">Amount: %d</string>
    <string name="warning_scale">Dude, it\'s too small</string>
    <string name="segmentation">Segmentation</string>
    <string name="faces_found">%d faces found</string>
    <string name="name_unsharp_masking">Unsharp masking</string>
    <string name="threshold_is">Threshold: %d</string>
    <string name="angle_is">Angle: %d</string>
    <string name="clear">Clear</string>
    <string name="found_out">Found out</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="exit_sure">Exit: Are you sure?</string>
    <string name="big_picture">"Too big picture. Squeeze?"</string>
    <string name="choose_another">I will choose another</string>
    <string name="continue_q">Change will not apply. Continue?</string>
    <string name="clear_crop">Clear CROP</string>
    <string name="not_path">Path not found</string>

</resources>
