<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/point"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_points"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point" />

    <TextView
        android:id="@+id/fs_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        android:text="@string/first_point"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_point" />

    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/fs_point"
        app:layout_constraintStart_toEndOf="@+id/fs_point"
        app:layout_constraintTop_toTopOf="@+id/fs_point" />

    <TextView
        android:id="@+id/ss_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/second_point"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fs_point" />

    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ss_point"
        app:layout_constraintStart_toEndOf="@+id/ss_point"
        app:layout_constraintTop_toTopOf="@+id/ss_point" />

    <TextView
        android:id="@+id/ts_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/third_point"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss_point" />

    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ts_point"
        app:layout_constraintStart_toEndOf="@+id/ts_point"
        app:layout_constraintTop_toTopOf="@+id/ts_point" />

    <TextView
        android:id="@+id/finish_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/finish_points"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/start_point"
        app:layout_constraintTop_toBottomOf="@+id/ts_point" />

    <TextView
        android:id="@+id/ff_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_point"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finish_point" />

    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ff_point"
        app:layout_constraintStart_toEndOf="@+id/ff_point"
        app:layout_constraintTop_toTopOf="@+id/ff_point" />

    <TextView
        android:id="@+id/sf_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/second_point"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ff_point" />

    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/sf_point"
        app:layout_constraintStart_toEndOf="@+id/sf_point"
        app:layout_constraintTop_toTopOf="@+id/sf_point" />

    <TextView
        android:id="@+id/tf_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/third_point"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sf_point" />

    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tf_point"
        app:layout_constraintStart_toEndOf="@+id/tf_point"
        app:layout_constraintTop_toTopOf="@+id/tf_point" />

</android.support.constraint.ConstraintLayout>