<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_settings_algem"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/settings"/>
    <Button
        android:id="@+id/button_start_linear_algebra"
        android:layout_width="102dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/start_algo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_start_points"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:background="@color/White"
        android:contentDescription="@string/start_points"
        android:src="@drawable/ic_point_green"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_finish_points"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/White"
        android:contentDescription="@string/finish_points"
        android:src="@drawable/ic_point_red"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/button_start_points"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/start_points"
        app:layout_constraintEnd_toEndOf="@+id/button_start_points"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_start_points"
        app:layout_constraintTop_toBottomOf="@+id/button_start_points" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/finish_points"
        app:layout_constraintEnd_toEndOf="@+id/button_finish_points"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_finish_points"
        app:layout_constraintTop_toBottomOf="@+id/button_finish_points" />


</android.support.constraint.ConstraintLayout>