<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/view_rotation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_scale_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/scale"
        app:layout_constraintBottom_toBottomOf="@+id/view_rotation"
        app:layout_constraintEnd_toEndOf="@+id/view_rotation"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_scaling"
        app:layout_constraintVertical_bias="0.681" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:text="0"
        app:layout_constraintStart_toStartOf="@+id/seekbar_scaling"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="1"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:text="2"
        app:layout_constraintEnd_toEndOf="@+id/seekbar_scaling"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_reset_scaling"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/view_rotation"
        app:layout_constraintEnd_toEndOf="@+id/view_rotation"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="@+id/view_rotation"
        app:layout_constraintTop_toTopOf="@+id/view_rotation"
        app:layout_constraintVertical_bias="0.897" />

    <SeekBar
        android:id="@+id/seekbar_scaling"
        android:layout_width="209dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_rotation"
        app:layout_constraintEnd_toEndOf="@+id/view_rotation"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="@+id/view_rotation"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_apply_scaling"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="@+id/view_rotation"
        app:layout_constraintEnd_toEndOf="@+id/view_rotation"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toEndOf="@+id/seekbar_scaling"
        app:layout_constraintTop_toTopOf="@+id/view_rotation"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_current_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/width"
        app:layout_constraintBottom_toBottomOf="@+id/view_rotation"
        app:layout_constraintEnd_toStartOf="@+id/text_current_height"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_rotation"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/text_current_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:text="@string/height"
        app:layout_constraintBottom_toBottomOf="@+id/view_rotation"
        app:layout_constraintEnd_toStartOf="@+id/button_apply_scaling"
        app:layout_constraintTop_toTopOf="@+id/view_rotation"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>